# kode

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/kode-agent/: Cargo.toml
crates/kode-agent/src/: agent.rs  lib.rs  tools.rs
crates/kode-core/: Cargo.toml
crates/kode-core/src/: config.rs  context.rs  cost.rs  lib.rs  session.rs  types.rs
crates/kode-llm/: Cargo.toml
crates/kode-llm/src/: anthropic.rs  client.rs  lib.rs  openai.rs  router.rs  stream.rs
crates/kode-tui/: Cargo.toml
crates/kode-tui/src/: app.rs  input.rs  lib.rs  markdown.rs  theme.rs  ui.rs
src/: main.rs  notify.rs  tui_runner.rs
tests/: mock_e2e.rs
