[package]
name = "kode-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
kode-core = { path = "../kode-core" }
kode-llm = { path = "../kode-llm" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
glob = "0.3"
