[package]
name = "kode-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
kode-core = { path = "../kode-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true }
eventsource-stream = { workspace = true }
bytes = { workspace = true }
