[package]
name = "kode-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
kode-core = { path = "../kode-core" }
kode-llm = { path = "../kode-llm" }
kode-agent = { path = "../kode-agent" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
